--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.46.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
